Closed Bug 1975525 Opened 10 months ago Closed 10 months ago

Command & CommandFor dialog close/request-close doesn't reflect button value

Categories

(Core :: DOM: Core & HTML, defect)

defect

Tracking

()

RESOLVED FIXED
142 Branch
Tracking Status
firefox142 --- fixed

People

(Reporter: keithamus, Assigned: keithamus)

References

(Blocks 1 open bug, )

Details

Attachments

(1 file, 1 obsolete file)

https://html.spec.whatwg.org/multipage/#the-dialog-element:invoker-command-steps

If command is in the Close state and element has an open attribute, then close the dialog element with invoker's optional value and invoker.
If command is in the Request Close state and element has an open attribute, then request to close the dialog element with invoker's optional value and invoker.

The buttons value should be used as the close value.

Attachment #9498475 - Attachment is obsolete: true
Status: ASSIGNED → RESOLVED
Closed: 10 months ago
Resolution: --- → FIXED
Target Milestone: --- → 142 Branch
QA Whiteboard: [qa-triage-done-c143/b142]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: