Bug 1975525 - Pass button value when using close command r=dom-core,edgar

Differential Revision: https://phabricator.services.mozilla.com/D256031